--- a/question/templates/question/t_mytopic.html
+++ b/question/templates/question/t_mytopic.html
@@ -153,7 +153,7 @@
  <script>
 function getMoreData()
 {
-    var nums=$('.QuestionFrame').length;
+    var nums=g_last_getmoredata_index;//$('.QuestionFrame').length;
     var order=1;
     var start=nums;
     var end=start+STEP;
@@ -162,6 +162,7 @@ function getMoreData()
         {
             appendAnswerElementCard(ret,"has_question_title");
             checkSets();
+            g_last_getmoredata_index+=STEP;
         }
         setLockScrollMoreData("false");
     });
