--- a/question/templates/question/t_question.html
+++ b/question/templates/question/t_question.html
@@ -513,7 +513,7 @@ function getMoreAnswerData()
 }
 function getAllAnswerData()
 {
-        var nums=0;//$('#AnswerItems .List-item').length;
+        var nums=g_last_getmoredata_index;//$('#AnswerItems .List-item').length;
         var order=1;
         var start=nums;
         var end=start+STEP;
@@ -523,6 +523,7 @@ function getAllAnswerData()
             {
                 appendAnswerElementList(ret,"all");
                 checkSets();
+                g_last_getmoredata_index+=STEP;
             }
             setLockScrollMoreData("false");
         });
