--- a/question/templates/question/t_search.html
+++ b/question/templates/question/t_search.html
@@ -73,15 +73,16 @@ function appendSearchPageElement(ret)
 function getMoreData() {
     if("None"!=search_keyword)
     {
-        var nums=$('.List-item').length;
+        var nums=g_last_getmoredata_index;//$('.List-item').length;
         var order=1;//pub_date
         var start=nums;
-        var end=start+10;
+        var end=start+STEP;
         $.post('/ajax/search/'+search_type+'/'+order+'/'+start+'/'+end+'/',{keyword:search_keyword},function(ret){
             if("fail"!=ret)
             {
                 appendSearchPageElement(ret);  
                 checkSets();
+                g_last_getmoredata_index+=STEP;
             }
             setLockScrollMoreData("false");
         });
