--- a/question/templates/question/t_topic.html
+++ b/question/templates/question/t_topic.html
@@ -16,7 +16,7 @@
 <div class="ContentItem-main">
 <div class="ContentItem-image">
 {% if user.is_staff %}
-<div class="ImageWrapper TopicCard-image TopicCard-image-editor">-->
+<div class="ImageWrapper TopicCard-image TopicCard-image-editor Avatar-editor">
 {% else %}
 <div class="ImageWrapper TopicCard-image">
 {% endif %}
@@ -119,7 +119,7 @@
 <svg class="Zi Zi--Size" fill="currentColor" viewBox="0 0 24 24" width="22" height="22"><path d="M16.296 7h.697A1.01 1.01 0 0 1 18 8.003v10.995c0 .554-.45 1.003-1.007 1.003H4.007A1.01 1.01 0 0 1 3 18.998V8.003C3 7.449 3.45 7 4.007 7h12.289zm-.892 11a.6.6 0 0 0 .597-.601V9.601A.597.597 0 0 0 15.405 9H5.596A.599.599 0 0 0 5 9.602v7.797c0 .335.267.601.596.601h9.808zM7 4h13a1 1 0 0 1 1 1v11a1 1 0 0 1-2 0V6.5c0-.5-.5-.5-.5-.5H7a1 1 0 0 1 0-2z" fill-rule="evenodd"></path></svg>
 </div>
 <div class="ModalButtonGroup ModalButtonGroup--vertical">
-<button class="Button Button--primary Button--blue" type="button" onclick="saveFile()">保存</button>
+<button class="Button Button--primary Button--blue AvatarSave" type="button" data-avatar-type="forTopicAvatar">保存</button>
 </div>
 </div>
 </div>
@@ -133,7 +133,7 @@
 <script>
 function getMoreData()
 {
-    var nums=$('.QuestionFrame').length;
+    var nums=g_last_getmoredata_index;//$('.QuestionFrame').length;
     var order=1;
     var start=nums;
     var end=start+STEP;
@@ -142,205 +142,11 @@ function getMoreData()
         {
             appendAnswerElementCard(ret,"has_question_title");
             checkSets();
+            g_last_getmoredata_index+=STEP;
         } 
         setLockScrollMoreData("false");
     });
-}
-
-function adjustChooseBox()
-{
-    var width=200;
-    var height=200;
-    var left=$("#preview_avatar").position().left+50;
-    var top=$("#preview_avatar").position().top+50;
-   
-    var refLeft=$("#preview_avatar").position().left;
-    var refTop=$("#preview_avatar").position().top;
-    console.log(refLeft);
-    console.log(refTop);
-    /* 
-    console.log($("#preview_avatar").offset().left);
-    console.log($("#preview_avatar").offset().top);
-    console.log($("#preview_avatar").position().left);
-    console.log($("#preview_avatar").position().top);
-    console.log($("#chooseBox").offset().left);
-    console.log($("#chooseBox").offset().top);
-    console.log($("#chooseBox").position().left);
-    console.log($("#chooseBox").position().top);
-    */
-    
-    var adjust=$("#adjust_choosebox").val();
-    width=width+(adjust-50)*2;
-    height=height+(adjust-50)*2;
-    left=left-adjust+50;
-    top=top-adjust+50;
-    
-    $('#chooseBox').css({
-                    width:width+'px',
-                    height:height+'px',
-                    left:left+'px',
-                    top:top+'px'
-    });
-    
-    
-    $('#chooseBox').mousedown(function (e) {
-            var originX= e.offsetX;
-            var originY= e.offsetY;
-            left=$("#chooseBox").position().left;
-            top=$("#chooseBox").position().top;
-            console.log("mousedown");
-            window.onmousemove=function (e) {
-                //console.log("x=",originX,e.offsetX);
-                //console.log("y=",originY,e.offsetY);
-                //console.log($("#chooseBox").position().left);
-                //console.log($("#chooseBox").position().top);
-                $('#chooseBox').css({
-                    position:'absolute',
-                    left:left+e.offsetX-originX+'px',
-                    top: top+e.offsetY-originY+'px'
-                });              
-                
-                if($('#chooseBox').position().left<=refLeft){
-                    $('#chooseBox').css({
-                        left:refLeft+'px'
-                    });
-                }
-                if($('#chooseBox').position().left>=refLeft+300-width){
-                    $('#chooseBox').css({
-                        left:refLeft+300-width+'px'
-                    });
-                }
-                if($('#chooseBox').position().top<=refTop){
-                    $('#chooseBox').css({
-                        top:refTop+'px'
-                    });
-                }
-                if($('#chooseBox').position().top>=refTop+300-height){
-                    $('#chooseBox').css({
-                        top:refTop+300-height+'px'
-                    });
-                }
-                
-                $('#chooseBox').mouseout(function () {
-                    console.log("mouseout");
-                    window.onmousemove=null;
-                    return
-                })
-            };
-            window.onmouseup= function () {
-                console.log("onmouseup");
-                window.onmousemove=null;
-                return
-            }
-        });
-}
-//$(function(){
-function checkAvatar(){
-    $(".TopicCard-image-editor").hover(
-        function(){
-            $(".Mask").removeClass("Mask-hidden");
-        },
-        function(){
-            $(".Mask").addClass("Mask-hidden");
-        }
-    );
-    
-    $(".Mask-content").click(function(){
-            $("#id_avatar_input").click();
-            $("#id_avatar_input").on("change",function(){
-               $("#upAvatarModal").modal('show');
-                var objUrl = getObjectURL(this.files[0]) ; //获取图片的路径，该路径不是图片在本地的路径
-                if (objUrl) {
-                    //var image = new Image();
-                    //image.src="/media/avatar/wudy1512464583.jpg";//objUrl;
-                    //var cvs=document.getElementById("avatar_canvas");
-                    //var ctx = cvs.getContext('2d');
-                    //ctx.drawImage(image, 100, 100, 240, 240);  
-                    $("#preview_avatar").attr("src", objUrl) ; //将图片路径存入src中，显示出图片
-                    $("#adjust_choosebox").val(50);                    
-                    
-                    setTimeout(adjustChooseBox,1*1000);
-                }
-            });
-    });
-}
-//});
-
-//建立一個可存取到該file的url
-function getObjectURL(file) {
-var url = null ;
-if (window.createObjectURL!=undefined) { // basic
-url = window.createObjectURL(file) ;
-} else if (window.URL!=undefined) { // mozilla(firefox)
-url = window.URL.createObjectURL(file) ;
-} else if (window.webkitURL!=undefined) { // webkit or chrome
-url = window.webkitURL.createObjectURL(file) ;
-}
-return url ;
-}
-
-/*
-function dataURLtoBlob(dataurl) {
-    var arr = dataurl.split(','), mime = arr[0].match(/:(.*?);/)[1],
-        bstr = atob(arr[1]), n = bstr.length, u8arr = new Uint8Array(n);
-    while(n--){
-        u8arr[n] = bstr.charCodeAt(n);
-    }
-    return new Blob([u8arr], {type:mime});
-}
-*/
-
-function saveFile()
-{
-    var img=document.getElementById("preview_avatar");
-    imgWidth=img.naturalWidth;
-    var can=document.getElementById("avatar_canvas");
-        //var btn=document.getElementById("btn");
-        //var returnImg=document.getElementById("returnImg");
-    var ctx=can.getContext("2d");
-    var newX=($('#chooseBox').position().left-$('#preview_avatar').position().left)*(img.naturalWidth/300);
-    var newY=($('#chooseBox').position().top-$('#preview_avatar').position().top)*(img.naturalHeight/300);
-    var newWidth=newHeight=(200+($("#adjust_choosebox").val()-50)*2)*(img.naturalWidth/300);
-    var newHeight=(200+($("#adjust_choosebox").val()-50)*2)*(img.naturalHeight/300);
-    //console.log(img.naturalWidth);
-    //console.log(img.naturalHeight);
-    //console.log(newX,newY);
-    //ctx.drawImage(img,newX,newY,200*3.45,200*2.6,0,0,200,200);
-    ctx.drawImage(img,newX,newY,newWidth,newHeight,0,0,200,200);
-    //var data=can.toDataURL("image/jpeg");
-    //var blob = dataURLtoBlob(data);
-    //console.log(blob);
-    can.toBlob(function(blobUrl){
-        console.log(blobUrl);
-        fileUpload(blobUrl);
-    },"image/jpeg");   
-}
-//   上传附件到方法
-function fileUpload(file_info) {
-var form_data = new FormData();
-//var file_info = $('#id_avatar_input')[0].files[0];
-form_data.append('imgfile',file_info,"image.jpg");
-//if(file_info==undefined)暂且不许要判断是否有附件
-//alert('你没有选择任何文件');
-//return false
-//}
-
-// 提交ajax的请求
-$.ajax({
-url:"/ajax/upload/topic_avatar/"+g_topic_id+"/",
-type:'POST',
-data: form_data,
-processData: false,  // tell jquery not to process the data
-contentType: false, // tell jquery not to set contentType
-success: function(ret) {
-$("#upAvatarModal").modal('hide');
-$("#id_avatar").attr("src",ret);
-$("#id_avatar").attr("srcset",ret);
-console.log("success");
-}
-}); // end ajax
-}  
-    
+}    
 function init() 
 {
     checkAvatar();
