--- a/question/templates/question/t_question.html
+++ b/question/templates/question/t_question.html
@@ -189,7 +189,7 @@
         <div class="AuthorInfo">
         <span class="UserLink AuthorInfo-avatarWrapper">
         <a class="UserLink-link PeoplePopover" href="/er/{{push_answer.author.id}}" data-author-id="{{push_answer.author.id}}" data-toggle="popover" data-placement="right" data-trigger="manual" data-content="null" data-html="true">
-        <img class="Avatar AuthorInfo-avatar" width="40" height="40" src="{{push_answer.author.userprofile.avatar}}" srcset="{{push_answer.author.userprofile.avatar}}" alt="{{push_answer.author.username}}">
+        <img class="Avatar AuthorInfo-avatar" width="40" height="40" src="{{push_answer.author.userprofile.avatar}}" srcset="{{push_answer.author.userprofile.avatar}}" alt="{{push_answer.author.first_name}}">
         </a>
         </span>
         <div class="AuthorInfo-content">
