--- a/question/templates/question/t_question_mobile.html
+++ b/question/templates/question/t_question_mobile.html
@@ -9,7 +9,7 @@
 <div>
 {% include 'question/header_mobile.html' %}
 </div>
-<main role="main" class="App-main"  data-moudle="question" data-answer-content="{{push_answer.content}}" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","user_avatar":"{{user.userprofile.avatar}}","question_id":"{{context_question.id}}","question_title":"{{context_question.title}}","question_answer_nums":"{{context_question.answer_nums}}","question_followed":"{{followed}}","answer_id":"{{push_answer.id}}","answer_like_nums":"{{push_answer.like_nums}}","author_id":"{{push_answer.author.id}}","author_name":"{{push_answer.author.first_name}}","author_avatar":"{{push_answer.author.userprofile.avatar}}","author_mood":"{{push_answer.author.userprofile.mood}}"}'>
+<main role="main" class="App-main"  data-module="question" data-answer-content="{{push_answer.content}}" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","user_avatar":"{{user.userprofile.avatar}}","question_id":"{{context_question.id}}","question_title":"{{context_question.title}}","question_answer_nums":"{{context_question.answer_nums}}","question_followed":"{{followed}}","answer_id":"{{push_answer.id}}","answer_like_nums":"{{push_answer.like_nums}}","author_id":"{{push_answer.author.id}}","author_name":"{{push_answer.author.first_name}}","author_avatar":"{{push_answer.author.userprofile.avatar}}","author_mood":"{{push_answer.author.userprofile.mood}}"}'>
 <div>
 
 
@@ -89,7 +89,7 @@
 <span class="UserLink AuthorInfo-name">
 <a class="UserLink-link" target="_blank" href="/er/{{push_answer.author.id}}">{{push_answer.author.first_name}}</a></span></div>
 <div class="AuthorInfo-detail"><div class="AuthorInfo-badge">
-<div class="RichText AuthorInfo-badgeText">{{push_answer.author.first_name}}</div></div></div></div></div>
+<div class="RichText AuthorInfo-badgeText">{{push_answer.author.userprofile.mood}}</div></div></div></div></div>
 </div>
 <div class="RichContent RichContent--unescapable RichContent--withMask">
 <div class="RichContent-expand">
@@ -171,301 +171,7 @@
 </div>
 </div>
 <!--- div other for invite--->
-<script>
-function invite()
-{
-    $(".Invite").each(function(index,element){
-        $(element).click(function(){
-            var question_id=$(".QuestionPage").attr("data-question-id");
-            //inviter=$(element).attr("data-from");
-            receiver=$(element).attr("data-receiver");
-            //$.get('/ajax/invite/?question='+question_id+'&from='+inviter+'&to='+invitee,function(ret){
-            $.get('/ajax/invite/?question='+question_id+'&to='+receiver,function(ret){
-                alert(ret);
-            });
-        });
-    });
-}
-function appendInviteElement(ret)
-{
-    for( i in ret)
-    {
-        var adept_id=ret[i][0];
-        var adept_name=ret[i][1];
-        var adept_avatar=ret[i][2];
-        var adept_mood=ret[i][3];
-        
-        var data='<div class="List-item">\
-                    <div class="ContentItem">\
-                    <div class="ContentItem-main">\
-                    <div class="ContentItem-image">\
-                    <span class="UserLink UserItem-avatar">\
-                    <a class="UserLink-link" target="_blank" href="/er/'+adept_id+'">\
-                    <img class="Avatar Avatar--large UserLink-avatar PeoplePopover" width="60" height="60" src="'+adept_avatar+'" srcset="'+adept_avatar+'" alt="'+adept_name+'" data-author-id="'+adept_id+'" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">\
-                    </a>\
-                    </span>\
-                    </div>\
-                    <div class="ContentItem-head">\
-                    <h2 class="ContentItem-title">\
-                    <div class="UserItem-title">\
-                    <span class="UserLink UserItem-name">\
-                    <a class="UserLink-link" target="_blank" href="/er/'+adept_id+'"><span class="RichText">'+adept_name+'</span></a>\
-                    </span>\
-                    </div>\
-                    </h2>\
-                    <div class="ContentItem-meta">\
-                    <div>\
-                    <div class="ContentItem-status">\
-                    <div class="ContentItem-statusItem">'+adept_mood+'</div>\
-                    </div>\
-                    </div>\
-                    </div>\
-                    </div>\
-                    <div class="ContentItem-extra">\
-                    <button class="Button Button--blue Invite" type="button" data-receiver="'+adept_id+'">邀请回答</button>\
-                    </div>\
-                    </div>\
-                    </div>\
-                    </div>\
-                    ';
-        $(".QuestionInvitation-content.List").append(data);
-    }
-}
-function showInvite()
-{
-    var topics="";
-    $(".TopicLink").each(function(){
-        topics+=($(this).attr("data-topic-id"))+";";
-    });
 
-    $.post("/ajax/topic_adept/",{"topics":topics},function(ret){
-        if("fail"!=ret)
-        {
-            appendInviteElement(ret);
-            $("#inviteModal").modal('show');
-            checkSets();
-            invite();
-        }
-    })
-    //$("#inviteModal").modal('show');
-}
-
-function appendMoreAnswerListElement(ret)
-{
-    for(i in ret)
-    {
-        var answer_id=ret[i][0];
-        var answer_content=ret[i][1]+"<p>&nbsp;</p>";
-        var answer_like_nums=ret[i][2];
-        var answer_comment_nums=ret[i][3];
-        var answer_pub_date=ret[i][4];
-        var author_id=ret[i][5];
-        var author_name=ret[i][6];
-        var author_avatar=ret[i][7];
-        var author_mood=ret[i][8];
-        
-        var data='<div class="ScrollIntoMark"><div class="List-item"><div class="ContentItem AnswerItem">\
-            <div class="ContentItem-meta">\
-            <div class="AuthorInfo AnswerItem-authorInfo AnswerItem-authorInfo--related">\
-            <span class="UserLink AuthorInfo-avatarWrapper">\
-            <a class="UserLink-link" target="_blank" href="/er/'+author_id+'">\
-            <img class="Avatar AuthorInfo-avatar" width="38" height="38" src="'+author_avatar+'" srcset="'+author_avatar+'" alt="'+author_name+'">\
-            </a>\
-            </span>\
-            <div class="AuthorInfo-content">\
-            <div class="AuthorInfo-head">\
-            <span class="UserLink AuthorInfo-name">\
-            <a class="UserLink-link" target="_blank" href="/er/'+author_id+'">'+author_name+'</a></span></div>\
-            <div class="AuthorInfo-detail"><div class="AuthorInfo-badge">\
-            <div class="RichText AuthorInfo-badgeText">'+author_mood+'</div></div></div></div></div>\
-            </div>\
-            <div class="RichContent is-collapsed RichContent--unescapable RichContent--withMask">\
-            <div class="RichContent-expand">\
-            <div class="RichContent-inner RichContent-inner--collapsed" style="max-height:400px;">\
-            <span class="RichText CopyrightRichText-richText">'+addClassImg(answer_content,'class="origin_image"')+'</span></div>\
-            <button class="Button ContentItem-more ContentItem-rightButton Button--plain" type="button">展开阅读全文<svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon Icon--arrow" style="height:16px;width:10px;" width="10" height="16" aria-hidden="true"><title></title><g><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg></button>\
-            </div>\
-            <div class="ContentItem-actions">\
-            <span>\
-            <button class="Button VoteButton VoteButton--up" aria-label="赞同" type="button"><svg viewBox="0 0 20 18" class="Icon VoteButton-upIcon Icon--triangle" style="height:16px;width:9px;" width="9" height="16" aria-hidden="true"><title></title><g><path d="M0 15.243c0-.326.088-.533.236-.896l7.98-13.204C8.57.57 9.086 0 10 0s1.43.57 1.784 1.143l7.98 13.204c.15.363.236.57.236.896 0 1.386-.875 1.9-1.955 1.9H1.955c-1.08 0-1.955-.517-1.955-1.9z"></path></g></svg>'+answer_like_nums+'</button>\
-            <button class="Button VoteButton VoteButton--down VoteButton--mobileDown" aria-label="反对" type="button"><svg viewBox="0 0 20 18" class="Icon VoteButton-downIcon Icon--triangle" style="height:16px;width:9px;" width="9" height="16" aria-hidden="true"><title></title><g><path d="M0 15.243c0-.326.088-.533.236-.896l7.98-13.204C8.57.57 9.086 0 10 0s1.43.57 1.784 1.143l7.98 13.204c.15.363.236.57.236.896 0 1.386-.875 1.9-1.955 1.9H1.955c-1.08 0-1.955-.517-1.955-1.9z"></path></g></svg></button>\
-            </span>\
-            <button class="Button ContentItem-action Button--plain Button--withIcon Button--withLabel" type="button"><span style="display:inline-flex;align-items:center;">&#8203;<svg class="Zi Zi--Comment Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M10.241 19.313a.97.97 0 0 0-.77.2 7.908 7.908 0 0 1-3.772 1.482.409.409 0 0 1-.38-.637 5.825 5.825 0 0 0 1.11-2.237.605.605 0 0 0-.227-.59A7.935 7.935 0 0 1 3 11.25C3 6.7 7.03 3 12 3s9 3.7 9 8.25-4.373 9.108-10.759 8.063z" fill-rule="evenodd"></path></svg></span>评论 2.4K</button>\
-            <button class="Button ContentItem-action Button--plain Button--withIcon Button--iconOnly" type="button"><span style="display:inline-flex;align-items:center;">&#8203;<svg class="Zi Zi--Star Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M5.515 19.64l.918-5.355-3.89-3.792c-.926-.902-.639-1.784.64-1.97L8.56 7.74l2.404-4.871c.572-1.16 1.5-1.16 2.072 0L15.44 7.74l5.377.782c1.28.186 1.566 1.068.64 1.97l-3.89 3.793.918 5.354c.219 1.274-.532 1.82-1.676 1.218L12 18.33l-4.808 2.528c-1.145.602-1.896.056-1.677-1.218z" fill-rule="evenodd"></path></svg></span></button>\
-            <button class="Button ContentItem-action ContentItem-less ContentItem-rightButton Button--plain is-hide" type="button"><span class="RichContent-collapsedText">收起</span><svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon is-active Icon--arrow" width="10" height="16" aria-hidden="true" style="height: 16px; width: 10px;"><title></title><g><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg></button>\
-            </div>\
-            </div>\
-            </div>\
-            </div>\
-            </div>';
-
-        
-        $(".MoreAnswerContent.List").append(data);
-    }
-}
-function appendAllAnswerListElement(ret)
-{
-    for(i in ret)
-    {
-        var answer_id=ret[i][0];
-        var answer_content=ret[i][1]+"<p>&nbsp;</p>";
-        var answer_like_nums=ret[i][2];
-        var answer_comment_nums=ret[i][3];
-        var answer_pub_date=ret[i][4].split(" ")[0];
-        var author_id=ret[i][5];
-        var author_name=ret[i][6];
-        var author_avatar=ret[i][7];
-        var author_mood=ret[i][8];
-        
-        var data='<div class="ScrollIntoMark"><div class="List-item">\
-                    <div class="ContentItem AnswerItem">\
-                    <div class="ContentItem-meta">\
-                    <div class="AuthorInfo AnswerItem-authorInfo AnswerItem-authorInfo--related">\
-                    <span class="UserLink AuthorInfo-avatarWrapper">\
-                    <a class="UserLink-link" target="_blank" href="/er/'+author_id+'">\
-                    <img class="Avatar AuthorInfo-avatar" width="38" height="38" src="'+author_avatar+'" srcset="'+author_avatar+'" alt="'+author_name+'">\
-                    </a>\
-                    </span>\
-                    <div class="AuthorInfo-content">\
-                    <div class="AuthorInfo-head">\
-                    <span class="UserLink AuthorInfo-name">\
-                    <a class="UserLink-link" target="_blank" href="/er/'+author_id+'">'+author_name+'</a>\
-                    </span>\
-                    </div>\
-                    <div class="AuthorInfo-detail"><div class="AuthorInfo-badge"><div class="RichText AuthorInfo-badgeText">'+author_mood+'</div></div></div>\
-                    </div>\
-                    </div>\
-                    </div>\
-                    <div class="RichContent RichContent--unescapable RichContent--withMask">\
-                    <div class="RichContent-expand">\
-                    <div class="RichContent-inner RichContent-inner--collapsed">\
-                    <span class="RichText CopyrightRichText-richText">'+addClassImg(answer_content,'class="origin_image"')+'</span>\
-                    </div>\
-                    <button class="Button ContentItem-more ContentItem-rightButton Button--plain is-hide" type="button">展开阅读全文<svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon Icon--arrow" style="height:16px;width:10px;" width="10" height="16" aria-hidden="true"><title></title><g><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg></button>\
-                    <div class="ContentItem-time"><span>发布于 '+answer_pub_date+'</span></div>\
-                    </div>\
-                    <div class="ContentItem-actions Sticky RichContent-actions is-bottom" style="">\
-                    <span>\
-                    <button class="Button VoteButton VoteButton--up" aria-label="赞同" type="button"><svg viewBox="0 0 20 18" class="Icon VoteButton-upIcon Icon--triangle" width="9" height="16" aria-hidden="true" style="height: 16px; width: 9px;"><title></title><g><path d="M0 15.243c0-.326.088-.533.236-.896l7.98-13.204C8.57.57 9.086 0 10 0s1.43.57 1.784 1.143l7.98 13.204c.15.363.236.57.236.896 0 1.386-.875 1.9-1.955 1.9H1.955c-1.08 0-1.955-.517-1.955-1.9z"></path></g></svg>12K</button>\
-                    <button class="Button VoteButton VoteButton--down VoteButton--mobileDown" aria-label="反对" type="button"><svg viewBox="0 0 20 18" class="Icon VoteButton-downIcon Icon--triangle" width="9" height="16" aria-hidden="true" style="height: 16px; width: 9px;"><title></title><g><path d="M0 15.243c0-.326.088-.533.236-.896l7.98-13.204C8.57.57 9.086 0 10 0s1.43.57 1.784 1.143l7.98 13.204c.15.363.236.57.236.896 0 1.386-.875 1.9-1.955 1.9H1.955c-1.08 0-1.955-.517-1.955-1.9z"></path></g></svg></button>\
-                    </span>\
-                    <button class="Button ContentItem-action Button--plain Button--withIcon Button--withLabel" type="button"><span style="display: inline-flex; align-items: center;">&#8203;<svg class="Zi Zi--Comment Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M10.241 19.313a.97.97 0 0 0-.77.2 7.908 7.908 0 0 1-3.772 1.482.409.409 0 0 1-.38-.637 5.825 5.825 0 0 0 1.11-2.237.605.605 0 0 0-.227-.59A7.935 7.935 0 0 1 3 11.25C3 6.7 7.03 3 12 3s9 3.7 9 8.25-4.373 9.108-10.759 8.063z" fill-rule="evenodd"></path></svg></span>评论 643</button>\
-                    <button class="Button ContentItem-action Button--plain Button--withIcon Button--iconOnly" type="button"><span style="display: inline-flex; align-items: center;">&#8203;<svg class="Zi Zi--Star Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M5.515 19.64l.918-5.355-3.89-3.792c-.926-.902-.639-1.784.64-1.97L8.56 7.74l2.404-4.871c.572-1.16 1.5-1.16 2.072 0L15.44 7.74l5.377.782c1.28.186 1.566 1.068.64 1.97l-3.89 3.793.918 5.354c.219 1.274-.532 1.82-1.676 1.218L12 18.33l-4.808 2.528c-1.145.602-1.896.056-1.677-1.218z" fill-rule="evenodd"></path></svg></span></button>\
-                    <button class="Button ContentItem-action ContentItem-less ContentItem-rightButton Button--plain" type="button"><span class="RichContent-collapsedText">收起</span><svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon is-active Icon--arrow" width="10" height="16" aria-hidden="true" style="height: 16px; width: 10px;"><title></title><g><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg></button>\
-                    </div></div></div></div>\
-                    </div>';
-
-        
-        $(".AllAnswerContent.List").append(data);
-    }
-}
-function getMoreAnswerData()
-{
-    var order=1;
-    var start=0;
-    var end=2;
-    $.get('/ajax/answers/'+g_question_id+'/'+order+'/'+start+'/'+end+'/',function(ret){
-        if("fail"!=ret)
-        {
-            appendAnswerElementList(ret,"more");
-            checkSets();
-        }
-        setLockScrollMoreData("false");
-    });
-}
-
-function getAllAnswerData()
-{
-    var nums=g_last_getmoredata_index;//$('.List-item').length;
-    var order=1;
-    var start=nums;
-    var end=start+STEP;
-    $.get('/ajax/answers/'+g_question_id+'/'+order+'/'+start+'/'+end+'/',function(ret){
-        if("fail"!=ret)
-        {
-            appendAnswerElementList(ret,"all");
-            checkSets();
-            g_last_getmoredata_index+=STEP;
-        }
-        setLockScrollMoreData("false");
-    });
-}
-
-function getMoreData()
-{
-    if("all"==g_list_type)
-    {
-        getAllAnswerData();
-    }
-    else
-    {
-        setLockScrollMoreData("false");
-    }
-}
-function initElement()
-{
-    $('title').text(g_question_title+" - 大大大");
-    $(".QuestionHeader-title").append('<a href="/question/'+g_question_id+'">'+g_question_title+'</a>');
-    $(".AuthorInfo-avatar").attr("src",g_user_avatar);
-    $(".AuthorInfo-name").empty().append(g_user_name);
-    if("true"==g_question_followed)
-    {
-        $(".FollowButton").removeClass("Button--blue").addClass("Button--grey").attr("data-question-id",g_question_id).attr("data-followed","true").text("已关注");
-    }
-    else
-    {
-        $(".FollowButton").removeClass("Button--grey").addClass("Button--blue").attr("data-question-id",g_question_id).attr("data-followed","false").text("关注问题");
-    }
-    
-    var g_push_answer_content_scale_imge=addClassImg(g_push_answer_content,'class="origin_image"');
-    $(".RichText.CopyrightRichText-richText").html(g_push_answer_content_scale_imge);
-    
-}
-function initData()
-{
-    g_last_getmoredata_index=0;
-    g_module=$("main").attr("data-module");
-    
-    var str_main_data=$("main").attr("data-dfs-main");
-	var main_data=JSON.parse(str_main_data);
-    g_logged=main_data.logged;
-    g_user_id=main_data.user_id;
-    g_user_name=main_data.user_name;
-    g_user_avatar=main_data.user_avatar;
-    g_question_id=main_data.question_id;
-    g_question_title=main_data.question_title;
-    g_question_answer_nums=main_data.question_answer_nums;
-    g_question_followed=main_data.question_followed;
-    g_push_answer_id=main_data.answer_id;
-    g_push_answer_like_nums=main_data.answer_like_nums;
-    //g_push_answer_content=main_data.answer_content;
-    g_push_answer_content=$("main").attr("data-answer-content");
-    g_author_id=main_data.author_id;
-    g_author_name=main_data.author_name;
-    g_author_avatar=main_data.author_avatar;
-    g_author_mood=main_data.author_mood;
-    
-    if(""!=g_push_answer_id)
-        g_list_type="more";
-    else
-        g_list_type="all";
-}
-function init()
-{
-    initData();
-    initElement();
-    if("more"==g_list_type)
-    {
-        //appendPushAnswerElement();
-        getMoreAnswerData();
-    }
-    else
-    {
-        getMoreData();
-    }
-    checkSets();
-}
-</script>
 </body>
 
 
